--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyGithubApp</string>
+    <string name="menu_favorite">Favorite</string>
+    <string name="menu_search">Search</string>
 </resources>
