--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MyGithubApp</string>
     <string name="menu_favorite">Favorite</string>
     <string name="menu_search">Search</string>
+    <string name="item_user_avatar">User Avatar</string>
+    <string name="item_followers">Followers:</string>
+    <string name="item_following">Following:</string>
 </resources>
