update: MainActivity layout for empy list handling
add text view as a place holder when threre's no list viewed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="item_user_avatar">User Avatar</string>
     <string name="item_followers">Followers:</string>
     <string name="item_following">Following:</string>
+    <string name="empty_list">It\'s Empty Here</string>
 </resources>
