--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="item_followers">Followers:</string>
     <string name="item_following">Following:</string>
     <string name="empty_list">It\'s Empty Here</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty_following">Not Following Anyone</string>
@@ -14,4 +15,5 @@
     <string name="following_count">Following: %s</string>
     <string name="add_favorite">User Added To Favorite</string>
     <string name="remove_favorite">User Removed To Favorite</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
