update: adjust the way to call the FavoriteActivity
instead of the usual intent, I add try block to handle the exception if module not installed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="add_favorite">User Added To Favorite</string>
     <string name="remove_favorite">User Removed To Favorite</string>
     <string name="title_favorite">Favorite</string>
+    <string name="module_not_found">Module Not Found</string>
 </resources>
